updates related to the release process